--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -10,9 +10,13 @@ on:
     branches: [ "main" ]
 
 jobs:
+# build profile
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest,windows-latest,macOS-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -27,6 +31,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
+# publish profile      
   publish:
     needs: build
     runs-on: ubuntu-latest
